// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSubheader.js should be dark 1`] = `

<div class="v-subheader theme--dark">
</div>

`;

exports[`VSubheader.js should be inset 1`] = `

<div class="v-subheader v-subheader--inset theme--light">
</div>

`;

exports[`VSubheader.js should be light 1`] = `

<div class="v-subheader theme--light">
</div>

`;

exports[`VSubheader.js should have custom class 1`] = `

<div class="v-subheader foo theme--light">
</div>

`;
